--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 	<div class="products">
         <div class="text-bg-info text-center">
             <h2>SMART WATCH</h2>
-            <img src="images/watch.png" class="rounded" width="200px" height="200px">
+            <img src="watch.png" class="rounded" width="200px" height="200px">
             <p>SMART WATCH that has many of the features of a smartphone or a computer:
                 Buy the latest smartwatches from the leading brands in our new wearable technology range</p>
             <p>Price: $2500</p>
@@ -47,28 +47,28 @@
 
         <div class="text-bg-warning text-center">
             <h2>SHOE</h2>
-            <img src="images/shoe.png" class="rounded-circle" width="200px" height="200px">
+            <img src="shoe.png" class="rounded-circle" width="200px" height="200px">
             <p>Buy Metro Shoes online in India. Select from a huge variety of stylish shoes for men, women & kids at the best prices.</p>
             <p>Price: $1800</p>
             <button class="add-to-cart" onclick="addToCart('SHOE', 1800)">Add to Cart</button>
         </div>
         <div class="text-bg-danger text-center">
             <h2>SAREE</h2>
-            <img src="images/saree.png" class="img-thumbnail" width="200px" height="200px">
+            <img src="saree.png" class="img-thumbnail" width="200px" height="200px">
             <p>Buy latest designer sarees online at best price. Shop for best quality of cotton sarees, silk sarees, georgette sarees and many more only at Peachmode.</p>
             <p>Price: $1500</p>
             <button class="add-to-cart" onclick="addToCart('SAREE', 1500)">Add to Cart</button>
         </div>
         <div class="text-bg-secondary text-center">
             <h2>WESTERN WEAR</h2>
-            <img src="images/western.png" class="rounded" width="200px" height="200px">
+            <img src="western.png" class="rounded" width="200px" height="200px">
             <p>WESTERN WEAR Dress For Women: Choose from a wide range of latest western wear for women online.</p>
             <p>Price: $800</p>
             <button class="add-to-cart" onclick="addToCart('WESTERN WEAR',800)">Add to Cart</button>
         </div>
         <div class="text-bg-dark text-center">
             <h2>KURTI</h2>
-            <img src="images/kurti.png" class="img-thumbnail" width="200px" height="200px">
+            <img src="kurti.png" class="img-thumbnail" width="200px" height="200px">
             <p>KURTI Buy stylish Kurtis from wide range in online.Shop for trendiest Kurtis at lowest prices & stunning </p>
             <p>Price: $900</p>
             <button class="add-to-cart" onclick="addToCart('KURTI', 900)">Add to Cart</button>
